--- a/templates/dbconfig-common.erb
+++ b/templates/dbconfig-common.erb
@@ -14,7 +14,7 @@ Set($DatabaseHost, '<%= @database_host %>');
 Set($DatabasePort, '<%= @database_port %>');
 
 Set($DatabaseUser , '<%= @database_user %>');
-Set($DatabasePassword , '<%= @database_password %>');
+Set($DatabasePassword , '<%= @database_passwd %>');
 
 # SQLite needs a special case, since $DatabaseName must be a full pathname
 my $dbc_dbname = 'rt4'; if ( "pgsql" eq "sqlite3" ) { Set ($DatabaseName, '' . '/' . $dbc_dbname); } else { Set ($DatabaseName, $dbc_dbname); }
