--- a/templates/rt.conf.erb
+++ b/templates/rt.conf.erb
@@ -1,5 +1,5 @@
 # This file is for the command-line client, /usr/bin/rt.
 
-server <% @rt_server %>
-user <% @rt_user %>
-passwd <% @rt_passwd %>
+server <%= @rt_server %>
+user <%= @rt_user %>
+passwd <%= @rt_passwd %>
